--- a/frontend/src/pages/Post/Post.css
+++ b/frontend/src/pages/Post/Post.css
@@ -13,6 +13,17 @@
     width: 100%;
 }
 
+.category-div {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(227, 227, 227);
+    justify-content: center;
+}
+
+.category-div > p {
+    font-size: 15px;
+}
+
 .pi-chevron-left {
     font-size: 35px;
     color: rgb(117, 116, 116);
@@ -73,7 +84,7 @@
     border-radius: 30px;
     font-size: 30px;
     border: none;
-    background-color: rgb(238, 137, 238);
+    background-color: rgb(255, 233, 133);
 }
 
 .ingredient-button {
@@ -133,4 +144,8 @@ input::placeholder {
     border-radius: 20px;
     border: none;
     background-color: none;
+}
+
+.recipeMain-div {
+    margin-bottom: 20px;
 }
