--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -23,6 +23,10 @@
     cursor: pointer;
 }
 
+.post-button:hover {
+    border: 3px solid gray;
+}
+
 .pi {
     padding-right: 7px;
 }
@@ -46,4 +50,17 @@
     padding-top: 30px;
     padding-bottom: 30px;
     padding-left: 12px;
+}
+
+.navbar-logout-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    color: gray;
+}
+
+.navbar-logout-container > p {
+    border-bottom: 2px solid gray;
+    cursor: pointer;
 }
