--- a/frontend/src/pages/Feed/Feed.css
+++ b/frontend/src/pages/Feed/Feed.css
@@ -8,5 +8,15 @@
 
 .feed-inner-container {
     width: 100%;
+    margin-bottom: 50px;
     overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
